--- a/Drone.yaml
+++ b/Drone.yaml
@@ -1,24 +1,9 @@
-#Drone CI File!
-#Commit Message: Drone! Captain Canary is here! 
-
 kind: pipeline
-type: kubernetes
 name: default
 
 steps:
-
-- name: build
-  image: golang:1.13
+- name: test
+  image: node:9.8.0
   commands:
-    - "go build -o ./myapp"
-
-- name: publish  
-  image: plugins/docker
-  settings:
-    username:
-      from_secret: docker_username
-    password:
-      from_secret: docker_password
-    repo: rlachhman/myrepo
-    auto_tag: true
-    auto_tag_suffix: drone-build
+  - npm install
+  - npm test
