--- a/drone.yaml
+++ b/drone.yaml
@@ -16,12 +16,12 @@ steps:
 - name: publish
   image: plugins/docker
   settings:
-    repo: nazmulb/node-microservice
+    repo: luisrojas2/firstdrone
     auto_tag: true
     username:
-      from_secret: docker_username
+      from_secret: luisen22
     password:
-      from_secret: docker_password
+      from_secret: Cospin.2023
 - name: deploy
   image: docker
   commands:
